--- a/5. Sistema LibraryHelp/nbproject/private/private.properties
+++ b/5. Sistema LibraryHelp/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/tmarco/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\MARCO T\u00daLIO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
