--- a/5. Sistema LibraryHelp/nbproject/private/private.properties
+++ b/5. Sistema LibraryHelp/nbproject/private/private.properties
@@ -1,15 +1,6 @@
-<<<<<<< Updated upstream
 compile.on.save=true
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Mathews\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-=======
-compile.on.save=true
-do.depend=false
-do.jar=true
-javac.debug=true
-javadoc.preview=true
-user.properties.file=/home/tmarco/.netbeans/8.1/build.properties
->>>>>>> Stashed changes
+user.properties.file=C:\\Users\\Alunoinf_2\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
